[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mona-preview"
description = "Official Python SDK for MonaDB — sync + async, built on httpx."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Mona" }]
dynamic = ["version"]
keywords = ["monadb", "database", "sdk", "httpx", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
]

[project.urls]
Homepage = "https://github.com/rchowell/mona-python"
Repository = "https://github.com/rchowell/mona-python"
Issues = "https://github.com/rchowell/mona-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

# uv installs this group automatically on `uv run`, so `uv run pytest` works
# out of the box without activating a venv or passing --extra.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.version]
path = "src/mona/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mona"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests against running Mona services (auto-skipped if unreachable)",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py310"
exclude = ["main.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Handled by ruff format; enabling them causes conflicting fix suggestions.
    "COM812",
    "ISC001",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/mona/_client.py" = ["PLR0913"]  # HTTP client constructors accept many config knobs
"src/mona/_transport.py" = ["PLR0913"]
"src/mona/database.py" = ["SLF001", "D105", "D107"]  # resources call client transport; repr/str are obvious
"src/mona/resources/databases.py" = ["SLF001", "D105", "D107"]
"tests/**/*.py" = [
    "S101",    # assert
    "D100",    # module docstrings
    "D103",    # test function docstrings
    "PLR2004", # magic values
    "ANN001",  # missing argument annotations in helpers
    "ANN201",  # missing return annotations in helpers
    "T201",    # print
    "INP001",  # implicit namespace packages
    "PT022",   # pytest yield fixtures
    "SLF001",  # private member access in mocks
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["mona"]

[tool.mypy]
strict = true
files = ["src"]
